# ocean-backend

./: Cargo.toml  README.md  diesel.toml  go.mod  go.sum
cmd/ocean/: main.go
configs/: ocean.toml
internal/app/: application.go
internal/pkg/config/: config.go
internal/pkg/handler/: handler.go
migrations/2020-04-12-051317_create_topics/: up.sql
migrations/2020-04-19-095309_create_users/: up.sql
migrations/2020-05-29-041010_create_user_groups/: up.sql
migrations/2020-06-02-033033_add_links/: up.sql
migrations/2020-06-02-050924_add_videos/: up.sql
migrations/2020-06-02-160847_add_images/: up.sql
migrations/2020-06-04-050317_create_all/: up.sql
migrations/2020-06-05-053421_create_comments/: up.sql
migrations/2020-06-09-051058_create_titles/: up.sql
migrations/2020-06-11-043856_create_marks/: up.sql
migrations/2020-06-13-114513_create_indexes/: up.sql
migrations/2020-06-15-165239_create_votes/: up.sql
migrations/2020-06-23-044229_create_categories/: up.sql
migrations/2020-06-29-041707_create_unique_marks/: up.sql
migrations/2020-06-29-044216_create_unique_votes/: up.sql
migrations/2020-07-18-144910_set_default_token/: up.sql
migrations/2020-07-26-095526_create_telegram_chats/: up.sql
migrations/2020-07-27-161257_delete_telegram_chats/: up.sql
migrations/2020-10-18-051342_create_forum_categories/: up.sql
migrations/2020-10-23-051058_create_forum_sections/: up.sql
migrations/2020-11-13-032553_create_forum_topics/: up.sql
migrations/2020-11-14-040029_create_posts/: up.sql
migrations/2020-11-20-054846_topic_updates/: up.sql
migrations/2020-11-22-115845_remove_fierce/: up.sql
migrations/2020-12-26-110958_remove_multimedia_links/: up.sql
migrations/2021-01-23-084514_add_forum_poll/: up.sql
migrations/2021-03-22-170124_add_gender/: up.sql
migrations/2021-03-26-051726_add_trash/: up.sql
migrations/2021-06-26-132309_create_user_blocked/: up.sql
migrations/2021-12-05-140845_create_likes/: up.sql
migrations/2021-12-18-064017_create_automatic_trash/: up.sql
migrations/2022-01-10-164408_update_references/: up.sql
src/: main.rs  schema.rs
src/ocean/: api_server.rs  app.rs  config.rs  db.rs  lib.rs  migration.rs  router.rs  trash_monitor.rs  watchdog.rs
src/ocean/api/: authorizer.rs  error.rs  mod.rs  router.rs  server.rs  user_cache.rs
src/ocean/controller/: activity.rs  comment.rs  feed.rs  like.rs  mandela.rs  mod.rs  rating.rs  search.rs  topic.rs  user.rs
src/ocean/controller/forum/: category.rs  mod.rs  post.rs  section.rs  topic.rs
src/ocean/json_rpc/: error.rs  mod.rs  request.rs  response.rs
src/ocean/model/: comment.rs  mandela.rs  mod.rs  schema.rs  topic.rs  user.rs  user_group.rs
src/ocean/telegram_bot/: api.rs  mod.rs
