[package]
name = "ocean"
version = "1.0.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2021"

[lib]
name = "ocean"
path = "src/ocean/lib.rs"

[dependencies]
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_derive = "1.0.228"
dirs = "6.0.0"
hyper = { version = "0.14.16", features = ["server"] }
hyper-rustls = "0.27.7"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
lazy_static = "1.5.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "serde_json"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.42", features = ["serde"] }
sha1 = "0.10.6"
log = "0.4.14"
env_logger = "0.11.8"
rustls = "0.23.35"
tokio-rustls = "0.26.4"
futures-util = "0.3.19"
reqwest = { version = "0.11.9", features = ["json", "blocking", "native-tls"] }
url = "2.2.2"

[features]
default = ["native-tokio"]
webpki-tokio = ["tokio-runtime"]
native-tokio = ["tokio-runtime"]
tokio-runtime = ["hyper/runtime"]
