[package]
name = "ocean"
version = "1.0.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"

[lib]
name = "ocean"
path = "src/ocean/lib.rs"

[dependencies]
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_derive = "1.0.228"
dirs = "6.0.0"
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.19", features = ["full"] }
hyper-rustls = "0.27.7"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
lazy_static = "1.5.0"
diesel = { version = "2.3.5", features = ["postgres", "chrono", "serde_json"] }
diesel_migrations = "2.3.1"
chrono = { version = "0.4.42", features = ["serde"] }
sha1 = "0.10.6"
log = "0.4.14"
env_logger = "0.11.8"
rustls = "0.23.35"
tokio-rustls = "0.26.4"
futures-util = "0.3.19"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
url = "2.2.2"
