[package]
name = "ocean"
version = "1.0.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"

[lib]
name = "ocean"
path = "src/ocean/lib.rs"

[dependencies]
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_derive = "1.0.228"
dirs = "6.0.0"
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["full"] }
hyper-rustls = "0.27.7"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
diesel = { version = "2.3.6", features = ["postgres", "chrono", "serde_json"] }
diesel_migrations = "2.3.1"
chrono = { version = "0.4.44", features = ["serde"] }
sha1 = "0.10.6"
log = "0.4.29"
env_logger = "0.11.9"
rustls = "0.23.37"
tokio-rustls = "0.26.4"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
url = "2.5.8"
